Final version of the companies that can accept students
