# api/companies/company.routes.js
@@ -1,6 +1,7 @@
 'use strict';
 
 const controller = require('./company.controller');
+const { authentication, companyAuthentication } = require("../../middleware/authentication");
 
 module.exports = Router => {
   const router = new Router({
@@ -8,7 +9,9 @@ module.exports = Router => {
   });
 
   router
-    .post('/:companyId/jobs/:jobId/accept/:studentId', controller.companyAcceptStudent)
+    .use(authentication) //from now on, only authenticated requests!
+    .use(companyAuthentication) //from now on, only authenticated companies
+    .post('/jobs/:jobId/accept/:studentId', controller.companyAcceptStudent)
 
   return router;
 };
